Finish suppliers feature implementation
